--- a/index.html
+++ b/index.html
@@ -108,10 +108,32 @@
                 Jeff Atwood
               </p>
             </div>
-            
-          </div>
-          </div>    
-          </div>
+            </div>
+            <div class="tile is-ancestor">
+              <div class="tile is-vertical is-parent">
+                <div class="tile is-child">
+                </div>
+                <div class="tile is-child">
+                </div>
+                <div class="tile is-child">
+                </div>
+                <div class="tile is-child">
+                </div>
+                <div class="tile is-child has-text-link">
+                  <article class="message is-link">
+                    <div class="message-header">
+                      <p>Info</p>
+                      <button class="delete" aria-label="delete"></button>
+                    </div>
+                    <div class="message-body">
+                      Lorem ipsum dolor sit amet, consectetur adipiscing elit. <strong>Pellentesque risus mi</strong>, tempus quis placerat ut, porta nec nulla. Vestibulum rhoncus ac ex sit amet fringilla. Nullam gravida purus diam, et dictum <a>felis venenatis</a> efficitur. Aenean ac <em>eleifend lacus</em>, in mollis lectus. Donec sodales, arcu et sollicitudin porttitor, tortor urna tempor ligula, id porttitor mi magna a neque. Donec dui urna, vehicula et sem eget, facilisis sodales sem.
+                    </div>
+                  </article>
+                </div>
+                <div class="tile is-child">
+                </div>
+              </div>
+            </div>
         </div>
 
     </section>
