Added more icons and fixed some colors, stuck on design at the moment

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://kit.fontawesome.com/a9e0066e27.js" crossorigin="anonymous"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Evan Chopra</title>
     <link rel="stylesheet" href="css/main.css">
@@ -56,33 +56,32 @@
       </div>
     </section>
     <section class="section">
-      <div class="container is-fluid">
-        <div class="notification">
+      <div class="container is-fluid ">
+        <div class="notification is-info">
           <div class="columns">
           <div class="column is-two-fifths">
-            <p class="bd-notification is-info"></p>
-            <h3>Places I Have Contributed <br/></h3>
+            <h1><i class="fa fa-laptop-house fa-3x"></i> <br/></h1>
             <div class="tile is-ancestor">
               <div class="tile is-4 is-vertical is-parent">
-                <div class="tile is-child box has-text-link">
+                <div class="tile is-child box ">
                   <figure class="image is-128x64">
                     <img src="lockheed.png">
                   </figure>
                   <p class="subtitle">Software Engineer Associate <br/>
                     May 2020 - Current</p>
                 </div>
-                <div class="tile is-child box has-text-link">
+                <div class="tile is-child box ">
                   <figure class="image is-128x64">
                     <img src="rstor.png">
                   </figure>
-                  <p class="subtitle">Software Engineer/Software Engineering Intern <br/>
-                    May 2020 - Current</p>
+                  <p class="subtitle">Software Engineering Intern <br/>
+                    December 2018 - May 2020</p>
                 </div>
               </div>
               <div class="tile is-4 is-vertical is-parent">
                 <div class="tile is-child">
                 </div>
-                <div class="tile is-child box has-text-link	is-border">
+                <div class="tile is-child box ">
                   <figure class="image is-128x64">
                     <img src="ucsc.png">
                   </figure>
