More color changes and font changes, expirementing with new education section

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Evan Chopra</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body>
+  <body style="background-color:hsl(204, 86%, 53%);">
     <nav class="navbar is-link" role="navigation" aria-label="main navigation">
       <div id="navbarBasicExample" class="navbar-menu">
         <div class="navbar-start">
@@ -56,25 +56,25 @@
       </div>
     </section>
     <section class="section">
-      <div class="container is-fluid ">
+      <div class="container is-fluid">
         <div class="notification is-info">
           <div class="columns">
           <div class="column is-two-fifths">
-            <h1><i class="fa fa-laptop-house fa-3x"></i> <br/></h1>
+            <h4 class="title is-4"><i class="fa fa-laptop-house fa-3x"></i> <br/>Work Experience</h4>
             <div class="tile is-ancestor">
               <div class="tile is-4 is-vertical is-parent">
                 <div class="tile is-child box ">
                   <figure class="image is-128x64">
                     <img src="lockheed.png">
                   </figure>
-                  <p class="subtitle">Software Engineer Associate <br/>
+                  <p class="subtitle is-6">Software Engineer Associate <br/>
                     May 2020 - Current</p>
                 </div>
                 <div class="tile is-child box ">
                   <figure class="image is-128x64">
                     <img src="rstor.png">
                   </figure>
-                  <p class="subtitle">Software Engineering Intern <br/>
+                  <p class="subtitle is-6">Software Engineering Intern <br/>
                     December 2018 - May 2020</p>
                 </div>
               </div>
@@ -85,16 +85,16 @@
                   <figure class="image is-128x64">
                     <img src="ucsc.png">
                   </figure>
-                  <p class="subtitle"><br/>Environmental Research Assistant<br/>
+                  <p class="subtitle is-6"><br/>Environmental Research Assistant<br/>
                     October 2018 - May 2019</p>
                 </div>
                 <div class="tile is-child">
                 </div>
               </div>
             </div>
-            <div class = "tile is-8 box">
+            <!-- <div class = "tile is-8 box">
               Something go here
-            </div>
+            </div> -->
           </div>
           <div class="column">
             Third column
@@ -136,7 +136,40 @@
         </div>
 
     </section>
-    <footer class="footer has-text-centered">
+
+    <!-- <section>
+      <div class="container is-fluid">
+        <div class="columns">
+          <div class="column is-half">
+            <div class="card">
+              <div class="card-image">
+              </div>
+              <div class="card-content">
+                <div class="media">
+                  <div class="media-left">
+                    <figure class="image is-128x128">
+                      <img src="/home/evanj80/Desktop/PortfolioV2/ucsc.png" alt="Placeholder image">
+                    </figure>
+                  </div>
+                  <div class="media-content">
+                    <p class="title is-2">University of California, Santa Cruz</p>
+                  </div>
+                </div>
+        
+                <div class="content">
+
+                </div>
+              </div>
+            </div>
+        
+
+          </div>
+        </div>
+      </div>
+    </section> -->
+   
+
+    <footer class="footer is-link has-text-centered">
       <div class="container">
          <div class="columns">
           <div class="column is-8-desktop is-offset-2-desktop">
