--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <title>Evan Chopra</title>
     <link rel="stylesheet" href="css/main.css">
   </head>
-  <body style="background-color: #6A91D4;">
+  <body style="background-color: #435C86;">
     <nav class="navbar is-link" role="navigation" aria-label="main navigation">
       <div id="navbarBasicExample" class="navbar-menu" style="
-      background-color: #435c86;">
+      background-color: #243147">
         <div class="navbar-start">
           <a href="/"class="navbar-item">
             Home
@@ -40,7 +40,7 @@
        
     </nav>
     <section class="hero is-small is-link"style="
-    background-color: #435c86;">
+    background-color: #243147">
       <div class="hero-body">
         <div class="container">
           <div class="columns">
