--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="css/main.css">
   </head>
   <body style="background-color: #435C86;">
-    <nav class="navbar is-link" role="navigation" aria-label="main navigation">
+    <nav class="navbar" role="navigation" aria-label="main navigation" style="background-color: #243147;">
       <div id="navbarBasicExample" class="navbar-menu" style="
       background-color: #243147">
         <div class="navbar-start">
