Fixed headers again

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
       background-color: #243147">
         <div class="navbar-start">
           <a href="/"class="navbar-item">
-            <p style="color:white">Home</p>
+            <p style="color:white" style="
+            background-color: #243147;">Home</p>
           </a>
     
-          <a href="/ResumeV2.pdf"class="navbar-item">
+          <a href="/ResumeV2.pdf"class="navbar-item" style="
+          background-color: #243147;">
             <p style="color:white">Resume</p>
           </a>
     
@@ -199,7 +201,7 @@
                   </p>
                   <p class="card-footer-item">
                     <span>
-                      Source Code for<a href="https://github.com/Evanj80/laundryTime"> Backend</a>
+                      Source Code for<a href="https://github.com/Evanj80/laundryTime">Backend</a>
                     </span>
                   </p>
                 </footer>
