Mistakes were made

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
       <div id="navbarBasicExample" class="navbar-menu" style="
       background-color: #243147">
         <div class="navbar-start">
-          <a href="/"class="navbar-item">
-            <p style="color:white" style="
-            background-color: #243147;">Home</p>
+          <a href="/"class="navbar-item" style="
+          background-color: #243147;">
+            <p style="color:white">Home</p>
           </a>
     
           <a href="/ResumeV2.pdf"class="navbar-item" style="
